# voxie

./: CMakeLists.txt  LICENSE  LICENSE.txt  README.md
lib/win32/: BulletCollision.lib  BulletDynamics.lib  BulletSoftBody.lib  LinearMath.lib
src/: collision.h  color.cpp  color.h  draw.cpp  draw.h  editorcommon.cpp  editorcommon.h  glm.h  include_gl.h  mainwindow.cpp  mainwindow.h  mathcommon.h  modelproperties.cpp  modelproperties.h  palette.cpp  palette.h  path.h  random.h  run.cpp  stringcommon.h  types.h  voxeditor.cpp  voxeditor.h  voxel.cpp  voxel.h
tools/: byteio.py  c2t.h  convert.py  mesher.pyx  mesher_c.cpp  setup.py  voxmodel.py
unity3d/: AnimateScript.cs  README.txt
